update colab setup

--- a/code/R-notebook/ch12/12-colab.ipynb
+++ b/code/R-notebook/ch12/12-colab.ipynb
@@ -14,7 +14,8 @@
    "outputs": [],
    "source": [
     "# Google Colaboratoryの環境設定\n",
-    "system(\"sudo apt install -y libcurl4-openssl-dev libv8-dev r-cran-rcppeigen\")\n",
+    "system(\"apt-get install -y libcurl4-openssl-dev libv8-dev r-cran-rcppeigen\")\n",
+    "options(Ncpus = 2)\n",
     "install.packages(c(\"caret\", \"fable\", \"feasts\", \"prophet\", \"tsibble\", \"urca\"))"
    ]
   },
