--- a/code/R-notebook/ch08/08-colab.ipynb
+++ b/code/R-notebook/ch08/08-colab.ipynb
@@ -14,6 +14,7 @@
    "outputs": [],
    "source": [
     "# Google Colaboratoryの環境設定\n",
+    "options(Ncpus = 2)\n",
     "install.packages(c(\"caret\", \"ggfortify\", \"glmnet\", \"glmnetUtils\", \"leaps\", \"neuralnet\", \"psych\"))"
    ]
   },
