--- a/code/Python-notebook/ch13/13.02.ipynb
+++ b/code/Python-notebook/ch13/13.02.ipynb
@@ -46,7 +46,16 @@
    "outputs": [],
    "source": [
     "hierarchy.cut_tree(my_result, 3)\n",
-    "#> array([[0], [1], [0], [2]])"
+    "#> array([[0], [1], [0], [2]])\n",
+    "\n",
+    "# 補足（見やすくする）\n",
+    "my_data.assign(cluster=\n",
+    "  hierarchy.cut_tree(my_result, 3))\n",
+    "#>     x   y  cluster\n",
+    "#> A   0   0        0\n",
+    "#> B -16   0        1\n",
+    "#> C  10  10        0\n",
+    "#> D  10 -15        2"
    ]
   },
   {
@@ -108,7 +117,16 @@
    "outputs": [],
    "source": [
     "my_result.labels_\n",
-    "#> array([1, 0, 1, 2], dtype=int32)"
+    "#> array([1, 0, 1, 2], dtype=int32)\n",
+    "\n",
+    "# 補足（見やすくする）\n",
+    "my_data.assign(\n",
+    "  cluster=my_result.labels_)\n",
+    "#>     x   y  cluster\n",
+    "#> A   0   0        1\n",
+    "#> B -16   0        0\n",
+    "#> C  10  10        1\n",
+    "#> D  10 -15        2"
    ]
   },
   {
