--- a/code/Python-notebook/ch07/07.ipynb
+++ b/code/Python-notebook/ch07/07.ipynb
@@ -360,7 +360,7 @@
    "outputs": [],
    "source": [
     "d = 5\n",
-    "X5 = PolynomialFeatures(d).fit_transform(X) # Xの1乗から5乗の変数\n",
+    "X5 = PolynomialFeatures(d, include_bias=False).fit_transform(X) # Xの1乗から5乗の変数\n",
     "\n",
     "my_model = LinearRegression()\n",
     "my_model.fit(X5, y)\n",
