--- a/addendum/07.04.03.ipynb
+++ b/addendum/07.04.03.ipynb
@@ -29,11 +29,34 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "kgskdjhp5M7W"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kgskdjhp5M7W",
+        "outputId": "cbbf2015-552e-4ff7-82fc-3e9efb3d9fdf"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/statsmodels/tools/_testing.py:19: FutureWarning: pandas.util.testing is deprecated. Use the functions in the public API at pandas.testing instead.\n",
+            "  import pandas.util.testing as tm\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "7.725744805546204e-07"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 1
+        }
+      ],
       "source": [
         "import numpy as np\n",
         "import pandas as pd\n",
@@ -89,7 +112,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qAXpIdEBvmb6",
-        "outputId": "14981a74-3054-4fbd-b677-0225515cd4c6"
+        "outputId": "c04b0b08-fdee-490f-954d-8ce4e22e8a3d"
       },
       "execution_count": 2,
       "outputs": [
@@ -160,7 +183,7 @@
           "height": 238
         },
         "id": "lqd_10R59ciz",
-        "outputId": "2b1e04ef-99ec-418e-dea9-bae5e0400c24"
+        "outputId": "c8ff7e56-ab94-4b2c-e7c9-dfcb22c849a7"
       },
       "execution_count": 3,
       "outputs": [
@@ -169,7 +192,7 @@
           "data": {
             "text/html": [
               "\n",
-              "  <div id=\"df-5972d1e7-5423-4e58-bc0c-f97e6a416a31\">\n",
+              "  <div id=\"df-60ce3456-3ad5-4096-af53-317244636365\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -255,7 +278,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-5972d1e7-5423-4e58-bc0c-f97e6a416a31')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-60ce3456-3ad5-4096-af53-317244636365')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -306,12 +329,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-5972d1e7-5423-4e58-bc0c-f97e6a416a31 button.colab-df-convert');\n",
+              "          document.querySelector('#df-60ce3456-3ad5-4096-af53-317244636365 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-5972d1e7-5423-4e58-bc0c-f97e6a416a31');\n",
+              "          const element = document.querySelector('#df-60ce3456-3ad5-4096-af53-317244636365');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -372,7 +395,7 @@
           "height": 238
         },
         "id": "z1gdH2qi-sQO",
-        "outputId": "c7a7b579-7062-4570-ed34-60427c7a0a6c"
+        "outputId": "b021af44-02b4-4b9c-f7f2-f26fc0cedef3"
       },
       "execution_count": 4,
       "outputs": [
@@ -381,7 +404,7 @@
           "data": {
             "text/html": [
               "\n",
-              "  <div id=\"df-8ca1c245-c458-411f-a16c-5b16c5463736\">\n",
+              "  <div id=\"df-125b8e1e-10ec-44c8-be6c-9cc2e6646270\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -460,7 +483,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8ca1c245-c458-411f-a16c-5b16c5463736')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-125b8e1e-10ec-44c8-be6c-9cc2e6646270')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -511,12 +534,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-8ca1c245-c458-411f-a16c-5b16c5463736 button.colab-df-convert');\n",
+              "          document.querySelector('#df-125b8e1e-10ec-44c8-be6c-9cc2e6646270 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-8ca1c245-c458-411f-a16c-5b16c5463736');\n",
+              "          const element = document.querySelector('#df-125b8e1e-10ec-44c8-be6c-9cc2e6646270');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -574,7 +597,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WPwGffNP-79E",
-        "outputId": "c0eb0118-6222-410e-e6de-bb11a468b119"
+        "outputId": "9f16c5c1-0b5e-4f7d-f4ee-6fd6dae094ed"
       },
       "execution_count": 5,
       "outputs": [
@@ -619,7 +642,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "l9-kv_Eb6IMl",
-        "outputId": "13992196-8b29-43ed-bc13-7f6af8864776"
+        "outputId": "9815fda8-1b27-428a-9a02-b53e21a61809"
       },
       "execution_count": 6,
       "outputs": [
@@ -638,9 +661,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Mはp.230の脚註4にあるような行列です．すべて1の列はどこにあってもいいのですが，`LinearRegression`と同じ結果にするためには，（おそらく）右端でなければなりません．\n",
-        "\n",
-        "整形して表示します．"
+        "Mはp.230の脚註4にあるような行列です．整形して表示します．"
       ],
       "metadata": {
         "id": "BfxgVxmoYDX9"
@@ -657,7 +678,7 @@
           "height": 238
         },
         "id": "UrpAR7nUYClv",
-        "outputId": "6093c1bb-1113-4b3f-cc74-8a19b35f5d3b"
+        "outputId": "3e1ba531-7150-4fdd-84ea-6c78af65b2c4"
       },
       "execution_count": 7,
       "outputs": [
@@ -666,7 +687,7 @@
           "data": {
             "text/html": [
               "\n",
-              "  <div id=\"df-145d9039-fe3d-4cda-9f30-c4da9dfa4de9\">\n",
+              "  <div id=\"df-34dcf4b5-9712-4385-ad31-e681994dfb29\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -752,7 +773,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-145d9039-fe3d-4cda-9f30-c4da9dfa4de9')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-34dcf4b5-9712-4385-ad31-e681994dfb29')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -803,12 +824,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-145d9039-fe3d-4cda-9f30-c4da9dfa4de9 button.colab-df-convert');\n",
+              "          document.querySelector('#df-34dcf4b5-9712-4385-ad31-e681994dfb29 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-145d9039-fe3d-4cda-9f30-c4da9dfa4de9');\n",
+              "          const element = document.querySelector('#df-34dcf4b5-9712-4385-ad31-e681994dfb29');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -851,7 +872,7 @@
         "\n",
         "正確に計算すると，RMSE（訓練）は0になります．Wolfram|Alphaを使うのが簡単です．\n",
         "\n",
-        "[5次式でフィット {4,10},{11,28},{16,32},{18,76},{20,32},{22,66}](https://www.wolframalpha.com/input/?i=5%E6%AC%A1%E5%BC%8F%E3%81%A7%E3%83%95%E3%82%A3%E3%83%83%E3%83%88+%7B4%2C10%7D%2C%7B11%2C28%7D%2C%7B16%2C32%7D%2C%7B18%2C76%7D%2C%7B20%2C32%7D%2C%7B22%2C66%7D&lang=ja)\n",
+        "[degree 5 {4,10},{11,28},{16,32},{18,76},{20,32},{22,66}](https://www.wolframalpha.com/input/?i=degree+5+%7B4%2C10%7D%2C%7B11%2C28%7D%2C%7B16%2C32%7D%2C%7B18%2C76%7D%2C%7B20%2C32%7D%2C%7B22%2C66%7D)\n",
         "\n",
         "計算方法はいろいろありますが，ここでは，ムーア・ペンローズ型一般逆行列（p.230の脚註4）を使います．"
       ],
@@ -873,7 +894,7 @@
           "height": 139
         },
         "id": "OD4mMz6-dbsW",
-        "outputId": "af0cd8cb-8df4-4f50-cff0-a567c78541c7"
+        "outputId": "06450323-96aa-43f5-b864-0a287070b437"
       },
       "execution_count": 8,
       "outputs": [
@@ -908,7 +929,7 @@
           "height": 139
         },
         "id": "xmibIwHffrxx",
-        "outputId": "1e6c7c91-e712-4744-b0e0-6f2009fbf4f6"
+        "outputId": "10e25544-0006-4d87-b04b-d0d9ac99eb1d"
       },
       "execution_count": 9,
       "outputs": [
@@ -943,7 +964,7 @@
           "height": 37
         },
         "id": "eKdNIdm2fwHm",
-        "outputId": "ce3e1eb7-4358-41f1-8c16-b774b596a846"
+        "outputId": "5069e10c-12df-4280-c7c7-cc090135c7b0"
       },
       "execution_count": 10,
       "outputs": [
@@ -981,7 +1002,7 @@
           "height": 139
         },
         "id": "LXPYrwotgNio",
-        "outputId": "d2e18d1c-d069-44f0-b003-62ca2ade18a0"
+        "outputId": "a0bacad5-fe31-4164-c01d-297e4df2f5b6"
       },
       "execution_count": 11,
       "outputs": [
@@ -1017,7 +1038,7 @@
           "height": 37
         },
         "id": "yQRSYGxRiNFO",
-        "outputId": "912394aa-4ee9-4fce-aae2-e48b41d8f718"
+        "outputId": "0fbb8372-3598-486d-846c-d99444d99f2e"
       },
       "execution_count": 12,
       "outputs": [
@@ -1055,7 +1076,7 @@
           "height": 139
         },
         "id": "O9-sSPYZyzv_",
-        "outputId": "61985eef-9622-4f23-8412-946bda3c57de"
+        "outputId": "697196cc-548e-4aab-f8f6-61164adfd7b7"
       },
       "execution_count": 13,
       "outputs": [
@@ -1091,7 +1112,7 @@
           "height": 37
         },
         "id": "BHktXffyzeYT",
-        "outputId": "873d9c65-6f54-41d1-df2b-18a243dae34f"
+        "outputId": "f1087528-a217-4eae-f521-b4addb204029"
       },
       "execution_count": 14,
       "outputs": [
@@ -1132,7 +1153,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c4b79622-00ae-42b0-c4d0-26ada2f20256"
+        "outputId": "ee9786b6-da88-4b44-f568-1f1437c87030"
       },
       "execution_count": 15,
       "outputs": [
