--- a/addendum/07.04.03.ipynb
+++ b/addendum/07.04.03.ipynb
@@ -141,28 +141,33 @@
    "source": [
     "## 詳しい説明\n",
     "\n",
-    "scikit-learnでは，回帰分析の主要部の計算に，BLASとLAPACK（以下，まとめてBLAS）という線形代数のライブラリを使います．BLASには複数の実装があり，計算結果は，実装やアーキテクチャの選択によります．\n",
+    "**話をDockerで試しやすいのもに限定します．**\n",
     "\n",
-    "BLASの実装でDockerで使いやすいのは，OpenBLASとIntel MKLでしょう．いずれも，numpyと一緒にインストールできます．\n",
+    "scikit-learnでは，回帰分析の主要部の計算に，BLASとLAPACK（以下，まとめてBLAS）という線形代数のライブラリを使います．BLASには複数の実装があります．ここでは次のものを対象にします．インストール方法がそれぞれ2通りあります．\n",
     "\n",
-    "BLASの実装やアーキテクチャによる，計算結果の違いをまとめます．以下では，macOSのRosetta 2でエミュレートしたx86_64のことを「Rosetta」とし，エミュレーションでないものを「x86_64」とします．\n",
+    "- OpenBLAS\n",
+    "    - `pip install numpy`\n",
+    "    - `apt install libopenblas-dev`\n",
+    "- Intel MKL\n",
+    "    - `conda install numpy`\n",
+    "    - `apt install intel-mkl`\n",
     "\n",
-    "BLAS|アーキテクチャ|インストール法|結果\n",
-    ":-|:-|:-|:-\n",
-    "OpenBLAS a|x86_64|`pip install numpy==1.19.5`|A1\n",
-    "OpenBLAS b|x86_64|`pip install numpy==1.20.0`|A2\n",
-    "OpenBLAS b|x86_64|`pip install numpy==1.21.1`|A2\n",
-    "OpenBLAS c|x86_64|`pip install numpy==1.22.0`|A3\n",
-    "OpenBLAS (apt install)|x86_64|`pip install numpy`|A4\n",
-    "OpenBLAS|Rosetta|`pip install numpy`|B\n",
-    "OpenBLAS|aarch64|`pip install numpy`|C\n",
-    "Intel MKL|x86_64|`conda install numpy`|D\n",
-    "Intel MKL|Rosetta|`conda install numpy`|D\n",
+    "次のアーキテクチャを想定します．ただし，aarch64ではIntel MKLは使えません．\n",
     "\n",
-    "- A1, A2, A3, A4: x86_64では，OpenBLASのバージョンが変わると，計算結果が変わりました．（numpy 1.21.1でもOpenBLASのバージョンが変わりましたが，計算結果は1.20.0と同じでした．）\n",
-    "- B: Rosettaでは，OpenBLASのバージョンを変えても計算結果は変わりませんでした．\n",
-    "- C: aarch64（Apple Chip）での計算結果は，x86_64やRosettaでのものとは違っていました． \n",
-    "- D: Intel MKLでの計算結果は，x86_64とRosettaでのものと同じでした．"
+    "- x86_64: `docker run -it --rm ubuntu`\n",
+    "  - Intel\n",
+    "  - AMD\n",
+    "- Apple\n",
+    "  - aarch64: `docker run -it --rm --platform linux/arm64 ubuntu` \n",
+    "  - Rosetta 2: `docker run -it --rm --platform linux/x86_64 ubuntu`（aarch64によるx86_64のエミュレーション）\n",
+    "\n",
+    "計算結果は，BLASとアーキテクチャの組合せによります．組合せが異なれば，結果も異なると考えてください．次のような，例外的な事例があります．\n",
+    "\n",
+    "- Intel MKLを使う場合は，[環境変数`MKL_CBWR`](https://jp.xlsoft.com/documents/intel/mkl/11.3/mkl113_userguide_win/GUID-DCB010F6-DDBF-4A00-8BB3-049BEFDC2ED2.htm)に注意が必要でです．\n",
+    "  - 値を`COMPATIBLE`に設定すると，アーキテクチャによらず，同じ結果になりました．\n",
+    "  - Intel（AVX2をサポートするCPU）では，`MKL_CBWR`を設定していない場合は`AUTO`や`AVX2`と同じ（`COMPATIBLE`とは異なる）結果でした．\n",
+    "  - RyzenとRosetta 2は同じ結果でした．`MKL_CBWR`を設定していない場合は`COMPATIBLE`とは異なる結果，設定しいる場合は`COMPATIBLE`と同じ結果になりました．\n",
+    "- x86_64では，OpenBLASのバージョンによって，結果が変わることがありました．aarch64やRosetta 2ではそういうことはなかったので，AVXを使う場合だけのことかもしれません．OpenBLASをnumpyと一緒にインストールする場合は，numpyのバージョンによってOpenBLASのバージョンが変わることがあるので注意が必要です．"
    ]
   },
   {
@@ -171,39 +176,33 @@
    "source": [
     "### 再現方法\n",
     "\n",
-    "Dockerコンテナでの再現方法をまとめます．\n",
-    "\n",
-    "アーキテクチャ|コンテナの構築法\n",
-    ":-|:-\n",
-    "x86_64（実機）|`docker run -it --rm ubuntu`\n",
-    "x86_64（macOS上のRosetta 2）|`docker run -it --rm --platform linux/x86_64 ubuntu`\n",
-    "aarch64（Apple Chip）|`docker run -it --rm --platform linux/arm64 ubuntu`\n",
+    "上述の方法で構築したDockerコンテナでの再現方法をまとめます．\n",
+    "補足：numpyとscipyのバージョンは，執筆時点のMinicondaに合わせています．\n",
     "\n",
     "#### OpenBLAS\n",
     "\n",
-    "##### numpyと一緒にBLASをインストールする場合\n",
+    "##### numpyと一緒にインストールする場合\n",
     "\n",
     "```\n",
     "apt update\n",
-    "apt install -y curl python3 python3-pip\n",
+    "apt install -y python3 python3-pip\n",
     "pip install numpy==1.21.2 scipy==1.7.3 scikit-learn statsmodels\n",
     "python3 # Pythonを起動し，計算する．（以下略）\n",
     "```\n",
     "\n",
-    "##### numpyとは別にBLASをインストールする場合\n",
+    "##### numpyとは別にインストールする場合\n",
     "\n",
     "```\n",
     "apt update\n",
-    "apt install -y curl python3 python3-pip libopenblas-dev\n",
-    "mkdir -p ~/.config/pip\n",
-    "echo -e \"[install]\\nno-binary = numpy\" > ~/.config/pip/pip.conf\n",
-    "pip install numpy==1.21.2 scipy==1.7.3 scikit-learn statsmodels\n",
+    "apt install -y python3 python3-pip libopenblas-dev\n",
+    "pip install --no-binary :all: numpy==1.21.2\n",
+    "pip install scipy==1.7.3 scikit-learn statsmodels\n",
     "python3 # Pythonを起動し，計算する．（以下略）\n",
     "```\n",
     "\n",
-    "##### Intel MKL\n",
+    "#### Intel MKL\n",
     "\n",
-    "メモ：執筆時点のMinicondaでは，numpy 1.21.2とscipy 1.7.3が入りました．\n",
+    "##### numpyと一緒にインストールする場合\n",
     "\n",
     "```\n",
     "apt update\n",
@@ -212,10 +211,24 @@
     "sh Miniconda3-latest-Linux-x86_64.sh -b\n",
     "eval \"$(~/miniconda3/bin/conda shell.bash hook)\"\n",
     "conda install -y scikit-learn pandas statsmodels\n",
+    "\n",
     "python3 # Pythonを起動し，計算する．（以下略）\n",
+    "# あるいは\n",
+    "MKL_CBWE=COMPATIBLE python3 # Pythonを起動し，計算する．（以下略）\n",
     "```\n",
     "\n",
-    "numpyとは別にインストールする場合は，`apt install -y intel-mkl`とします（後はOpenBLASの場合と同様．詳細は割愛）．"
+    "##### numpyとは別にインストールする場合\n",
+    "\n",
+    "```\n",
+    "apt update\n",
+    "apt install -y python3 python3-pip intel-mkl\n",
+    "pip install --no-binary :all: numpy==1.21.2\n",
+    "pip install scipy==1.7.3 scikit-learn statsmodels\n",
+    "\n",
+    "python3 # Pythonを起動し，計算する．（以下略）\n",
+    "# あるいは\n",
+    "MKL_CBWE=COMPATIBLE python3 # Pythonを起動し，計算する．（以下略）\n",
+    "```"
    ]
   },
   {
@@ -226,8 +239,7 @@
    "source": [
     "## お詫び\n",
     "\n",
-    "上のコードの`X5`には少し問題がありました．\n",
-    "\n"
+    "上のコードの`X5`には少し問題がありました．"
    ]
   },
   {
@@ -533,7 +545,7 @@
     "\n",
     "`my_model.fit(X5, y)`と`my_model.predict(X5)`で行われるのは，次のような処理です（先と同じ結果になります）．\n",
     "\n",
-    "BLASの実装やアーキテクチャの選択によって結果が変わるのは★の部分です．"
+    "BLASとアーキテクチャの組合せによって結果が変わるのは★の部分です．"
    ]
   },
   {
