--- a/addendum/07.04.03.ipynb
+++ b/addendum/07.04.03.ipynb
@@ -158,15 +158,15 @@
     "  - Intel\n",
     "  - AMD\n",
     "- Apple\n",
-    "  - aarch64: `docker run -it --rm --platform linux/arm64 ubuntu` \n",
     "  - Rosetta 2: `docker run -it --rm --platform linux/x86_64 ubuntu`（aarch64によるx86_64のエミュレーション）\n",
+    "  - aarch64: `docker run -it --rm --platform linux/arm64 ubuntu` \n",
     "\n",
     "計算結果は，BLASとアーキテクチャの組合せによります．組合せが異なれば，結果も異なると考えてください．次のような，例外的な事例があります．\n",
     "\n",
     "- Intel MKLを使う場合は，[環境変数`MKL_CBWR`](https://jp.xlsoft.com/documents/intel/mkl/11.3/mkl113_userguide_win/GUID-DCB010F6-DDBF-4A00-8BB3-049BEFDC2ED2.htm)に注意が必要でです．\n",
-    "  - 値を`COMPATIBLE`に設定すると，アーキテクチャによらず，同じ結果になりました．\n",
+    "  - 値を`COMPATIBLE`に設定すると，Intel, AMD, Rosetta 2で同じ結果になりました．\n",
     "  - Intel（AVX2をサポートするCPU）では，`MKL_CBWR`を設定していない場合は`AUTO`や`AVX2`と同じ（`COMPATIBLE`とは異なる）結果でした．\n",
-    "  - RyzenとRosetta 2は同じ結果でした．`MKL_CBWR`を設定していない場合は`COMPATIBLE`とは異なる結果，設定しいる場合は`COMPATIBLE`と同じ結果になりました．\n",
+    "  - AMDとRosetta 2は同じ結果でした．`MKL_CBWR`を設定していない場合は`COMPATIBLE`とは異なる結果，設定しいる場合は`COMPATIBLE`と同じ結果になりました．\n",
     "- x86_64では，OpenBLASのバージョンによって，結果が変わることがありました．aarch64やRosetta 2ではそういうことはなかったので，AVXを使う場合だけのことかもしれません．OpenBLASをnumpyと一緒にインストールする場合は，numpyのバージョンによってOpenBLASのバージョンが変わることがあるので注意が必要です．"
    ]
   },
