--- a/addendum/07.04.03.ipynb
+++ b/addendum/07.04.03.ipynb
@@ -141,7 +141,7 @@
    "source": [
     "## 詳しい説明\n",
     "\n",
-    "**話をDockerで試しやすいのもに限定します．**\n",
+    "**話をDockerで試しやすいのものに限定します．**\n",
     "\n",
     "scikit-learnでは，回帰分析の主要部の計算に，BLASとLAPACK（以下，まとめてBLAS）という線形代数のライブラリを使います．BLASには複数の実装があります．ここでは次のものを対象にします．インストール方法がそれぞれ2通りあります．\n",
     "\n",
