コメント対応（7.4.3）
https://github.com/taroyabuki/fromzero/commit/264c038c53f81424f86b6313b30b59eaefa7f248#comments

--- a/code/Python-notebook/ch07/07-colab.ipynb
+++ b/code/Python-notebook/ch07/07-colab.ipynb
@@ -392,7 +392,7 @@
     "tmp = pd.DataFrame({'speed': np.linspace(min(my_data.speed),\n",
     "                                         max(my_data.speed),\n",
     "                                         100)})\n",
-    "X5 = PolynomialFeatures(d).fit_transform(tmp)\n",
+    "X5 = PolynomialFeatures(d, include_bias=False).fit_transform(tmp)\n",
     "tmp['model'] = my_model.predict(X5)\n",
     "\n",
     "my_sample = my_sample.assign(sample=y)\n",
