--- a/code/Python-notebook/ch09/09.04.ipynb
+++ b/code/Python-notebook/ch09/09.04.ipynb
@@ -49,7 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "warnings.simplefilter('ignore', UserWarning) # これ以降，警告を表示しない．\n",
+    "warnings.simplefilter('ignore') # これ以降，警告を表示しない．\n",
     "my_search = GridSearchCV(\n",
     "    xgboost.XGBClassifier(eval_metric='mlogloss'),\n",
     "    param_grid={'n_estimators'    : [50, 100, 150],\n",
@@ -61,7 +61,7 @@
     "                'subsample'       : [0.5, 0.75, 1]},\n",
     "    cv=5, # 5分割交差検証\n",
     "    n_jobs=1).fit(X, y) # n_jobs=-1ではない．\n",
-    "warnings.simplefilter('default', UserWarning) # これ以降，警告を表示する．\n",
+    "warnings.simplefilter('default') # これ以降，警告を表示する．\n",
     "\n",
     "my_search.best_params_\n",
     "#> {'colsample_bytree': 0.6,\n",
