--- a/code/Python-notebook/ch09/09.05.ipynb
+++ b/code/Python-notebook/ch09/09.05.ipynb
@@ -75,10 +75,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "warnings.simplefilter('ignore', UserWarning)  # これ以降，警告を表示しない．\n",
+    "warnings.simplefilter('ignore')  # これ以降，警告を表示しない．\n",
     "my_scores = cross_val_score(\n",
     "    xgboost.XGBClassifier(eval_metric='mlogloss'), X, y, cv=5)\n",
-    "warnings.simplefilter('default', UserWarning) # これ以降，警告を表示する．\n",
+    "warnings.simplefilter('default') # これ以降，警告を表示する．\n",
     "\n",
     "my_scores.mean()\n",
     "#> 0.9666666666666668"
