--- a/code/Python-notebook/ch09/09.06.ipynb
+++ b/code/Python-notebook/ch09/09.06.ipynb
@@ -49,8 +49,8 @@
     "my_data = sm.datasets.get_rdataset('iris', 'datasets').data\n",
     "X, y = my_data.iloc[:, 0:4], my_data.Species\n",
     "\n",
-    "my_pipeline = Pipeline([('sc', StandardScaler()),  # 標準化\n",
-    "                        ('mlp', MLPClassifier())]) # ニューラルネットワーク\n",
+    "my_pipeline = Pipeline([('sc',  StandardScaler()),              # 標準化\n",
+    "                        ('mlp', MLPClassifier(max_iter=1000))]) # ニューラルネットワーク\n",
     "my_scores = cross_val_score(my_pipeline, X, y, cv=LeaveOneOut(), n_jobs=-1)\n",
     "my_scores.mean()\n",
     "#> 0.9533333333333334"
