--- a/code/Python-notebook/ch09/09.ipynb
+++ b/code/Python-notebook/ch09/09.ipynb
@@ -306,7 +306,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "warnings.simplefilter('ignore', UserWarning) # これ以降，警告を表示しない．\n",
+    "warnings.simplefilter('ignore') # これ以降，警告を表示しない．\n",
     "my_search = GridSearchCV(\n",
     "    xgboost.XGBClassifier(eval_metric='mlogloss'),\n",
     "    param_grid={'n_estimators'    : [50, 100, 150],\n",
@@ -318,7 +318,7 @@
     "                'subsample'       : [0.5, 0.75, 1]},\n",
     "    cv=5, # 5分割交差検証\n",
     "    n_jobs=1).fit(X, y) # n_jobs=-1ではない．\n",
-    "warnings.simplefilter('default', UserWarning) # これ以降，警告を表示する．\n",
+    "warnings.simplefilter('default') # これ以降，警告を表示する．\n",
     "\n",
     "my_search.best_params_\n",
     "#> {'colsample_bytree': 0.6,\n",
@@ -426,10 +426,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "warnings.simplefilter('ignore', UserWarning)  # これ以降，警告を表示しない．\n",
+    "warnings.simplefilter('ignore')  # これ以降，警告を表示しない．\n",
     "my_scores = cross_val_score(\n",
     "    xgboost.XGBClassifier(eval_metric='mlogloss'), X, y, cv=5)\n",
-    "warnings.simplefilter('default', UserWarning) # これ以降，警告を表示する．\n",
+    "warnings.simplefilter('default') # これ以降，警告を表示する．\n",
     "\n",
     "my_scores.mean()\n",
     "#> 0.9666666666666668"
@@ -484,8 +484,8 @@
     "my_data = sm.datasets.get_rdataset('iris', 'datasets').data\n",
     "X, y = my_data.iloc[:, 0:4], my_data.Species\n",
     "\n",
-    "my_pipeline = Pipeline([('sc', StandardScaler()),  # 標準化\n",
-    "                        ('mlp', MLPClassifier())]) # ニューラルネットワーク\n",
+    "my_pipeline = Pipeline([('sc',  StandardScaler()),              # 標準化\n",
+    "                        ('mlp', MLPClassifier(max_iter=1000))]) # ニューラルネットワーク\n",
     "my_scores = cross_val_score(my_pipeline, X, y, cv=LeaveOneOut(), n_jobs=-1)\n",
     "my_scores.mean()\n",
     "#> 0.9533333333333334"
