--- a/code/R-notebook/ch11/11-colab.ipynb
+++ b/code/R-notebook/ch11/11-colab.ipynb
@@ -13,7 +13,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Google Colaboratoryの環境設定\n",
+    "# Google Colaboratoryの環境設定（GPUを使う場合）\n",
+    "# GPUを使おうとするとセッションがクラッシュする問題への対策\n",
+    "# https://github.com/googlecolab/colabtools/issues/2486#issuecomment-1010747044\n",
+    "# 1. ランタイム→ランタイムのタイプを変更で，ハードウェアアクセラレータを「GPU」にする．\n",
+    "# 2. このセルを実行する．\n",
+    "system(\"sed -i -e 's,R_LD_LIBRARY_PATH}:${LD_LIBRARY,LD_LIBRARY_PATH}:${R_LD_LIBRARY,' /usr/lib/R/etc/ldpaths\")\n",
+    "# 3. ランタイム→ランタイムを再起動．つまり，次に進む前にランタイムを再起動する．"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Google Colaboratoryの環境設定（共通）\n",
     "options(Ncpus = 2)\n",
     "install.packages(c(\"h2o\", \"keras\"))"
    ]
