fbprophet installation in Google Colab

--- a/code/Python-notebook/ch12/12-colab.ipynb
+++ b/code/Python-notebook/ch12/12-colab.ipynb
@@ -14,7 +14,8 @@
    "outputs": [],
    "source": [
     "# Google Colaboratoryの環境設定\n",
-    "!pip install pmdarima | tail -n 1"
+    "!pip install pmdarima pystan==2.* | tail -n 1\n",
+    "!pip install fbprophet | tail -n 1"
    ]
   },
   {
