--- a/code/Python-notebook/ch09/09.04.ipynb
+++ b/code/Python-notebook/ch09/09.04.ipynb
@@ -21,9 +21,12 @@
     "import xgboost\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.model_selection import GridSearchCV, LeaveOneOut\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
     "\n",
     "my_data = sm.datasets.get_rdataset('iris', 'datasets').data\n",
-    "X, y = my_data.iloc[:, 0:4], my_data.Species\n",
+    "X = my_data.iloc[:, 0:4]\n",
+    "label_encoder = LabelEncoder()\n",
+    "y = label_encoder.fit_transform(my_data.Species)\n",
     "\n",
     "my_search = GridSearchCV(RandomForestClassifier(),\n",
     "                         param_grid={'max_features': [2, 3, 4]},\n",
