--- a/code/Python-notebook/ch09/09.05.ipynb
+++ b/code/Python-notebook/ch09/09.05.ipynb
@@ -23,6 +23,7 @@
     "from sklearn.impute import SimpleImputer\n",
     "from sklearn.model_selection import cross_val_score, LeaveOneOut\n",
     "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
     "\n",
     "my_data = sm.datasets.get_rdataset('iris', 'datasets').data\n",
     "\n",
@@ -38,7 +39,9 @@
     "#> mean       5.843333     3.057333      3.751852     1.197037\n",
     "# 以下省略\n",
     "\n",
-    "X, y = my_data.iloc[:, 0:4], my_data.Species"
+    "X = my_data.iloc[:, 0:4]\n",
+    "label_encoder = LabelEncoder()\n",
+    "y = label_encoder.fit_transform(my_data.Species)"
    ]
   },
   {
