--- a/code/Python-notebook/ch09/09.ipynb
+++ b/code/Python-notebook/ch09/09.ipynb
@@ -278,9 +278,12 @@
     "import xgboost\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.model_selection import GridSearchCV, LeaveOneOut\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
     "\n",
     "my_data = sm.datasets.get_rdataset('iris', 'datasets').data\n",
-    "X, y = my_data.iloc[:, 0:4], my_data.Species\n",
+    "X = my_data.iloc[:, 0:4]\n",
+    "label_encoder = LabelEncoder()\n",
+    "y = label_encoder.fit_transform(my_data.Species)\n",
     "\n",
     "my_search = GridSearchCV(RandomForestClassifier(),\n",
     "                         param_grid={'max_features': [2, 3, 4]},\n",
@@ -374,6 +377,7 @@
     "from sklearn.impute import SimpleImputer\n",
     "from sklearn.model_selection import cross_val_score, LeaveOneOut\n",
     "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
     "\n",
     "my_data = sm.datasets.get_rdataset('iris', 'datasets').data\n",
     "\n",
@@ -389,7 +393,9 @@
     "#> mean       5.843333     3.057333      3.751852     1.197037\n",
     "# 以下省略\n",
     "\n",
-    "X, y = my_data.iloc[:, 0:4], my_data.Species"
+    "X = my_data.iloc[:, 0:4]\n",
+    "label_encoder = LabelEncoder()\n",
+    "y = label_encoder.fit_transform(my_data.Species)"
    ]
   },
   {
