「5.1.3 ウェブ上の表」のURL変更
GitHub上のtable要素が静的でなくなり，掲載したコードでは表を取得できなくなりました。この問題に対応するために，静的なHTMLファイルを用意しました。
Fixes #2

--- a/code/Python-notebook/ch05/05.01.ipynb
+++ b/code/Python-notebook/ch05/05.01.ipynb
@@ -133,7 +133,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "my_url = 'https://github.com/taroyabuki/fromzero/blob/master/data/exam.csv'\n",
+    "my_url = 'https://taroyabuki.github.io/fromzero/exam.html'\n",
     "my_tables = pd.read_html(my_url)"
    ]
   },
