--- a/code/Rmd/ch05/05.01.Rmd
+++ b/code/Rmd/ch05/05.01.Rmd
@@ -80,7 +80,7 @@ my_df %>% write.csv(file = "exam2.csv", row.names = FALSE,
 ### 5.1.3 ウェブ上の表
 
 ```{r}
-my_url <- "https://github.com/taroyabuki/fromzero/blob/master/data/exam.csv"
+my_url <- "https://taroyabuki.github.io/fromzero/exam.html"
 my_tables <- xml2::read_html(my_url) %>% rvest::html_table()
 ```
 
