--- a/code/Python-notebook/ch05/05.ipynb
+++ b/code/Python-notebook/ch05/05.ipynb
@@ -135,7 +135,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "my_url = 'https://github.com/taroyabuki/fromzero/blob/master/data/exam.csv'\n",
+    "my_url = 'https://taroyabuki.github.io/fromzero/exam.html'\n",
     "my_tables = pd.read_html(my_url)"
    ]
   },
