--- a/code/Python-notebook/ch05/05.ipynb
+++ b/code/Python-notebook/ch05/05.ipynb
@@ -350,6 +350,8 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import sklearn\n",
+    "from packaging import version\n",
     "from sklearn.preprocessing import (\n",
     "    OneHotEncoder)\n",
     "\n",
@@ -360,7 +362,10 @@
     "my_enc = OneHotEncoder()\n",
     "tmp = my_enc.fit_transform(\n",
     "    my_df[['class']]).toarray()\n",
-    "my_names = my_enc.get_feature_names()\n",
+    "if version.parse(sklearn.__version__) >= version.parse(\"1.0\"):\n",
+    "    my_names = my_enc.get_feature_names_out()\n",
+    "else:\n",
+    "    my_names = my_enc.get_feature_names()\n",
     "pd.DataFrame(tmp, columns=my_names)\n",
     "#>    x0_A  x0_B  x0_C\n",
     "#> 0   1.0   0.0   0.0\n",
@@ -403,7 +408,10 @@
     "\n",
     "tmp = my_enc.fit_transform(\n",
     "    my_df[['class']]).toarray()\n",
-    "my_names = my_enc.get_feature_names()\n",
+    "if version.parse(sklearn.__version__) >= version.parse(\"1.0\"):\n",
+    "    my_names = my_enc.get_feature_names_out()\n",
+    "else:\n",
+    "    my_names = my_enc.get_feature_names()\n",
     "pd.DataFrame(tmp, columns=my_names)\n",
     "#>    x0_B  x0_C\n",
     "#> 0   0.0   0.0\n",
