仕様変更への対応：get_feature_names() -> get_feature_names_out()

--- a/code/Python-notebook/ch10/10-colab.ipynb
+++ b/code/Python-notebook/ch10/10-colab.ipynb
@@ -230,7 +230,7 @@
     "my_dot = tree.export_graphviz(\n",
     "    decision_tree=my_tree,\n",
     "    out_file=None,\n",
-    "    feature_names=my_enc.get_feature_names(),\n",
+    "    feature_names=my_enc.get_feature_names_out() if hasattr(my_enc, 'get_feature_names_out') else my_enc.get_feature_names(),\n",
     "    class_names=my_pipeline.classes_,\n",
     "    filled=True)\n",
     "graphviz.Source(my_dot)"
@@ -336,7 +336,7 @@
     "my_lr.intercept_[0]\n",
     "#> 2.043878162056783\n",
     "\n",
-    "tmp = my_ohe.get_feature_names()\n",
+    "tmp = my_ohe.get_feature_names_out() if hasattr(my_ohe, 'get_feature_names_out') else my_ohe.get_feature_names()\n",
     "pd.Series(my_lr.coef_[0],\n",
     "          index=tmp)\n",
     "#> x0_2nd     -1.018069\n",
