--- a/code/Python-notebook/ch10/10.03.ipynb
+++ b/code/Python-notebook/ch10/10.03.ipynb
@@ -84,7 +84,7 @@
     "my_dot = tree.export_graphviz(\n",
     "    decision_tree=my_tree,\n",
     "    out_file=None,\n",
-    "    feature_names=my_enc.get_feature_names(),\n",
+    "    feature_names=my_enc.get_feature_names_out() if hasattr(my_enc, 'get_feature_names_out') else my_enc.get_feature_names(),\n",
     "    class_names=my_pipeline.classes_,\n",
     "    filled=True)\n",
     "graphviz.Source(my_dot)"
