--- a/code/Python-notebook/ch12/12-colab.ipynb
+++ b/code/Python-notebook/ch12/12-colab.ipynb
@@ -14,8 +14,7 @@
    "outputs": [],
    "source": [
     "# Google Colaboratoryの環境設定\n",
-    "!pip install pmdarima pystan==2.* | tail -n 1\n",
-    "!pip install fbprophet | tail -n 1"
+    "!pip install pmdarima prophet | tail -n 1"
    ]
   },
   {
@@ -283,7 +282,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from fbprophet import Prophet\n",
+    "try:\n",
+    "  from prophet import Prophet\n",
+    "except ImportError:\n",
+    "  from fbprophet import Prophet\n",
     "my_prophet_model = Prophet(seasonality_mode='multiplicative')\n",
     "my_prophet_model.fit(my_train)"
    ]
