--- a/code/Python-notebook/ch12/12.02.ipynb
+++ b/code/Python-notebook/ch12/12.02.ipynb
@@ -208,7 +208,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from fbprophet import Prophet\n",
+    "try:\n",
+    "  from prophet import Prophet\n",
+    "except ImportError:\n",
+    "  from fbprophet import Prophet\n",
     "my_prophet_model = Prophet(seasonality_mode='multiplicative')\n",
     "my_prophet_model.fit(my_train)"
    ]
