仕様変更への対応：get_feature_names() -> get_feature_names_out()

--- a/code/Python-notebook/ch05/05.02.ipynb
+++ b/code/Python-notebook/ch05/05.02.ipynb
@@ -76,8 +76,6 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import sklearn\n",
-    "from packaging import version\n",
     "from sklearn.preprocessing import (\n",
     "    OneHotEncoder)\n",
     "\n",
@@ -88,10 +86,7 @@
     "my_enc = OneHotEncoder()\n",
     "tmp = my_enc.fit_transform(\n",
     "    my_df[['class']]).toarray()\n",
-    "if version.parse(sklearn.__version__) >= version.parse(\"1.0\"):\n",
-    "    my_names = my_enc.get_feature_names_out()\n",
-    "else:\n",
-    "    my_names = my_enc.get_feature_names()\n",
+    "my_names = my_enc.get_feature_names_out() if hasattr(my_enc, 'get_feature_names_out') else my_enc.get_feature_names()\n",
     "pd.DataFrame(tmp, columns=my_names)\n",
     "#>    x0_A  x0_B  x0_C\n",
     "#> 0   1.0   0.0   0.0\n",
@@ -134,10 +129,7 @@
     "\n",
     "tmp = my_enc.fit_transform(\n",
     "    my_df[['class']]).toarray()\n",
-    "if version.parse(sklearn.__version__) >= version.parse(\"1.0\"):\n",
-    "    my_names = my_enc.get_feature_names_out()\n",
-    "else:\n",
-    "    my_names = my_enc.get_feature_names()\n",
+    "my_names = my_enc.get_feature_names_out() if hasattr(my_enc, 'get_feature_names_out') else my_enc.get_feature_names()\n",
     "pd.DataFrame(tmp, columns=my_names)\n",
     "#>    x0_B  x0_C\n",
     "#> 0   0.0   0.0\n",
