主成分分析の行列による再現の修正（Python）

--- a/code/Python-notebook/ch13/13.01.ipynb
+++ b/code/Python-notebook/ch13/13.01.ipynb
@@ -127,6 +127,8 @@
     "S = np.cov(Z, rowvar=0, ddof=0) # 分散共分散行列\n",
     "#S = Z.T @ Z / n                # （同じ結果）\n",
     "vals, vecs = np.linalg.eig(S)   # 固有値と固有ベクトル\n",
+    "idx = np.argsort(vals)[::-1]         # 固有値の大きい順の番号\n",
+    "vals, vecs = vals[idx], vecs[:, idx] # 固有値の大きい順での並べ替え\n",
     "Z @ vecs                        # 主成分スコア（結果は割愛）\n",
     "vals.cumsum() / vals.sum()      # 累積寄与率\n",
     "#> array([0.88848331, 0.97962854, 0.99858005, 1.        , 1.        ])"
