第5刷のための準備

--- a/code/Python-notebook/ch05/05.02.ipynb
+++ b/code/Python-notebook/ch05/05.02.ipynb
@@ -86,7 +86,9 @@
     "my_enc = OneHotEncoder()\n",
     "tmp = my_enc.fit_transform(\n",
     "    my_df[['class']]).toarray()\n",
-    "my_names = my_enc.get_feature_names_out() if hasattr(my_enc, 'get_feature_names_out') else my_enc.get_feature_names()\n",
+    "my_names = my_enc.get_feature_names() \\\n",
+    "if hasattr(my_enc, 'get_feature_names') \\\n",
+    "else my_enc.get_feature_names_out()\n",
     "pd.DataFrame(tmp, columns=my_names)\n",
     "#>    x0_A  x0_B  x0_C\n",
     "#> 0   1.0   0.0   0.0\n",
@@ -129,7 +131,9 @@
     "\n",
     "tmp = my_enc.fit_transform(\n",
     "    my_df[['class']]).toarray()\n",
-    "my_names = my_enc.get_feature_names_out() if hasattr(my_enc, 'get_feature_names_out') else my_enc.get_feature_names()\n",
+    "my_names = my_enc.get_feature_names() \\\n",
+    "if hasattr(my_enc, 'get_feature_names') \\\n",
+    "else my_enc.get_feature_names_out()\n",
     "pd.DataFrame(tmp, columns=my_names)\n",
     "#>    x0_B  x0_C\n",
     "#> 0   0.0   0.0\n",
