--- a/code/Python-notebook/ch09/09.04.ipynb
+++ b/code/Python-notebook/ch09/09.04.ipynb
@@ -24,9 +24,8 @@
     "from sklearn.preprocessing import LabelEncoder\n",
     "\n",
     "my_data = sm.datasets.get_rdataset('iris', 'datasets').data\n",
-    "X = my_data.iloc[:, 0:4]\n",
-    "label_encoder = LabelEncoder()\n",
-    "y = label_encoder.fit_transform(my_data.Species)\n",
+    "X, y = my_data.iloc[:, 0:4], my_data.Species\n",
+    "label_encoder = LabelEncoder(); y = label_encoder.fit_transform(y)\n",
     "\n",
     "my_search = GridSearchCV(RandomForestClassifier(),\n",
     "                         param_grid={'max_features': [2, 3, 4]},\n",
