--- a/code/Python-notebook/ch10/10.04.ipynb
+++ b/code/Python-notebook/ch10/10.04.ipynb
@@ -56,7 +56,9 @@
     "my_lr.intercept_[0]\n",
     "#> 2.043878162056783\n",
     "\n",
-    "tmp = my_ohe.get_feature_names_out() if hasattr(my_ohe, 'get_feature_names_out') else my_ohe.get_feature_names()\n",
+    "tmp = my_ohe.get_feature_names() \\\n",
+    "if hasattr(my_ohe, 'get_feature_names') \\\n",
+    "else my_ohe.get_feature_names_out()\n",
     "pd.Series(my_lr.coef_[0],\n",
     "          index=tmp)\n",
     "#> x0_2nd     -1.018069\n",
