--- a/code/Python-notebook/ch12/12-colab.ipynb
+++ b/code/Python-notebook/ch12/12-colab.ipynb
@@ -282,10 +282,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "try:\n",
-    "  from prophet import Prophet\n",
-    "except ImportError:\n",
-    "  from fbprophet import Prophet\n",
+    "try: from fbprophet import Prophet\n",
+    "except ImportError: from prophet import Prophet\n",
     "my_prophet_model = Prophet(seasonality_mode='multiplicative')\n",
     "my_prophet_model.fit(my_train)"
    ]
