--- a/code/Python-notebook/ch09/09.ipynb
+++ b/code/Python-notebook/ch09/09.ipynb
@@ -281,9 +281,8 @@
     "from sklearn.preprocessing import LabelEncoder\n",
     "\n",
     "my_data = sm.datasets.get_rdataset('iris', 'datasets').data\n",
-    "X = my_data.iloc[:, 0:4]\n",
-    "label_encoder = LabelEncoder()\n",
-    "y = label_encoder.fit_transform(my_data.Species)\n",
+    "X, y = my_data.iloc[:, 0:4], my_data.Species\n",
+    "label_encoder = LabelEncoder(); y = label_encoder.fit_transform(y)\n",
     "\n",
     "my_search = GridSearchCV(RandomForestClassifier(),\n",
     "                         param_grid={'max_features': [2, 3, 4]},\n",
@@ -377,7 +376,6 @@
     "from sklearn.impute import SimpleImputer\n",
     "from sklearn.model_selection import cross_val_score, LeaveOneOut\n",
     "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.preprocessing import LabelEncoder\n",
     "\n",
     "my_data = sm.datasets.get_rdataset('iris', 'datasets').data\n",
     "\n",
@@ -393,9 +391,7 @@
     "#> mean       5.843333     3.057333      3.751852     1.197037\n",
     "# 以下省略\n",
     "\n",
-    "X = my_data.iloc[:, 0:4]\n",
-    "label_encoder = LabelEncoder()\n",
-    "y = label_encoder.fit_transform(my_data.Species)"
+    "X, y = my_data.iloc[:, 0:4], my_data.Species"
    ]
   },
   {
@@ -432,6 +428,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "label_encoder = LabelEncoder()\n",
+    "y = label_encoder.fit_transform(y)\n",
+    "\n",
     "warnings.simplefilter('ignore')  # これ以降，警告を表示しない．\n",
     "my_scores = cross_val_score(\n",
     "    xgboost.XGBClassifier(eval_metric='mlogloss'), X, y, cv=5)\n",
